objects/ssot__ProductCategoryProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActiveFromDateTime__c</fullName>
        <label>Active From Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveToDateTime__c</fullName>
        <label>Active To Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Product Category Product Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryCategory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCategoryId__c</fullName>
        <label>Product Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761155464_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BundleProduct_Id_map_ProductCategory_rel</label>
        <referenceTo>ssot__BundleProduct__dlm</referenceTo>
        <relationshipLabel>BundleProduct_Id_map_ProductCategory_rel</relationshipLabel>
        <relationshipName>rel_1697761155464_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761175076_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoodsProduct_Id_map_ProductCategoryP_rel</label>
        <referenceTo>ssot__GoodsProduct__dlm</referenceTo>
        <relationshipLabel>GoodsProduct_Id_map_ProductCategoryP_rel</relationshipLabel>
        <relationshipName>rel_1697761175076_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761188815_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MasterProduct_Id_map_ProductCategory_rel</label>
        <referenceTo>ssot__MasterProduct__dlm</referenceTo>
        <relationshipLabel>MasterProduct_Id_map_ProductCategory_rel</relationshipLabel>
        <relationshipName>rel_1697761188815_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>